--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -9,7 +9,6 @@
 $--color-primary: #17b3a3;
 $--color-text-primary: #303133;
 
-
 // ---------- #2 ----------
 // Navbar
 $navbar--background-color: #263238;
@@ -20,3 +19,5 @@ $sidebar--color-text-dark: #fff;
 
 // Content
 $content--background-color: #f1f4f5;
+
+$background-sub-title: rgba(151, 186, 206, 0.498039215686275);
