--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -6,7 +6,7 @@
  */
 
 // ---------- #1 ----------
-$--color-primary: #17b3a3;
+$--color-primary: #357EF7;
 $--color-text-primary: #303133;
 
 // ---------- #2 ----------
