--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -256,15 +256,15 @@ input[readonly="readonly"] {
     width: 10%;
   }
 }
-.site-sidebar {
-  top: 114px;
-}
-.site-content > .el-tabs > .el-tabs__header {
-  top: 114px;
-}
-.fixed-header > .el-tabs__header > .el-tabs__nav-wrap {
-  top: 200px;
-}
+// .site-sidebar {
+//   top: 114px;
+// }
+// .site-content > .el-tabs > .el-tabs__header {
+//   top: 114px;
+// }
+// .fixed-header > .el-tabs__header > .el-tabs__nav-wrap {
+//   top: 200px;
+// }
 .site-sidebar--dark .site-sidebar__menu.el-menu .el-menu-item, .site-sidebar--dark .site-sidebar__menu.el-menu .el-menu-item, .site-sidebar--dark .site-sidebar__menu.el-menu .el-submenu .el-submenu__title {
   border-color: rgba(255, 255, 255, 0.6);
 }
