--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -275,3 +275,9 @@ input[readonly="readonly"] {
 .el-card {
   margin-bottom: 24px;
 }
+
+.page-title .title {
+  font-weight: 500;
+  font-size: 18px;
+  padding: 20px 0;
+}
