--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -316,12 +316,17 @@ input[readonly="readonly"] {
     transform: rotate(-90deg);
   }
 }
-.project-select, .handler-select, .partner-select, .manager-select, .maincharge-select, .srecord-select {
+.project-select, .handler-select, .partner-select, .manager-select, .maincharge-select, .srecord-select, .receive-accounapproval-select {
   .el-input.is-disabled .el-input__inner, .el-input.is-disabled .el-input__icon {
     cursor: pointer;
   }
   .el-input__inner, .el-input__inner:focus, .el-textarea__inner, .el-textarea__inner:focus {
     border-color: #DCDFE6 !important;
+  }
+}
+.receive-accounapproval-select {
+  .el-icon-search:before {
+    font-size: 20px;
   }
 }
 .region-picker {
