--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -343,3 +343,10 @@ input[readonly="readonly"] {
     }
   }
 }
+
+.site-sidebar--dark .site-sidebar__menu.el-menu .el-menu-item.is-active {
+  background-color: rgba(238,242,246,0.69) !important;
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
+  margin-right: 15px;
+}
