--- a/src/assets/scss/_element-ui__variable-lookup.scss
+++ b/src/assets/scss/_element-ui__variable-lookup.scss
@@ -58,7 +58,7 @@ $--background-color-base: #f5f7fa !default;
 -------------------------- */
 $--border-width-base: 1px !default;
 $--border-style-base: solid !default;
-$--border-color-base: #dcdfe6 !default;
+$--border-color-base: #707070 !default;
 $--border-color-light: #e4e7ed !default;
 $--border-color-lighter: #ebeef5 !default;
 $--border-color-extra-light: #f2f6fc !default;
@@ -340,7 +340,7 @@ $--input-disabled-color: $--disabled-color-base !default;
 $--input-disabled-placeholder-color: $--color-text-placeholder !default;
 
 $--input-medium-font-size: 14px !default;
-$--input-medium-height: 36px !default;
+$--input-medium-height: 100px !default;
 
 $--input-small-font-size: 13px !default;
 $--input-small-height: 32px !default;
