地区选择 组件修复

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -42,7 +42,7 @@
 .el-form-item.is-success .el-input__inner:focus,
 .el-form-item.is-success .el-textarea__inner,
 .el-form-item.is-success .el-textarea__inner:focus {
-  border-color: #dcdfe6 !important;
+  // border-color: #dcdfe6 !important;
 }
 
 .el-form-item.is-required .el-form-item__label:before {
