更新 select 组件 和 流程部分

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -332,7 +332,7 @@ input[readonly="readonly"] {
     transform: rotate(-90deg);
   }
 }
-.project-select, .handler-select, .partner-select, .manager-select, .maincharge-select, .srecord-select, .receive-accounapproval-select {
+.project-select, .handler-select, .partner-select, .manager-select, .maincharge-select, .srecord-select, .receive-accounapproval-select, .record-select {
   .el-input.is-disabled .el-input__inner, .el-input.is-disabled .el-input__icon {
     cursor: pointer;
   }
