--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -21,17 +21,17 @@
 
 .el-form-item .el-input__inner:focus,
 .el-form-item .el-textarea__inner:focus {
-  border-color: #dcdfe6 !important;
+  // border-color: #dcdfe6 !important;
 }
 
 .el-form-item .el-input__inner,
 .el-form-item .el-textarea__inner {
   border-color: #707070;
-  border-radius: 8px;
+  // border-radius: 8px;
 }
 .el-input.is-disabled .el-input__inner {
   border-color: #707070 !important;
-  border-radius: 8px;
+  // border-radius: 8px;
 }
 .el-form-item__label {
   color: #242424;
@@ -168,6 +168,10 @@ textarea[disabled="disabled"] {
 .el-input-group__append,
 .el-input-group__prepend {
   background-color: #fff;
+  border: 1px solid #707070;
+  border-left: 0;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
 
 .el-checkbox-group-vertical div {
@@ -337,7 +341,7 @@ input[readonly="readonly"] {
     cursor: pointer;
   }
   .el-input__inner, .el-input__inner:focus, .el-textarea__inner, .el-textarea__inner:focus {
-    border-color: #DCDFE6 !important;
+    // border-color: #DCDFE6 !important;
   }
 }
 .receive-accounapproval-select {
