--- a/src/assets/scss/_element-ui__variable-lookup.scss
+++ b/src/assets/scss/_element-ui__variable-lookup.scss
@@ -40,10 +40,10 @@ $--color-warning-lighter: mix($--color-white, $--color-warning, 90%) !default;
 $--color-danger-lighter: mix($--color-white, $--color-danger, 90%) !default;
 $--color-info-lighter: mix($--color-white, $--color-info, 90%) !default;
 
-$--color-text-primary: #303133 !default;
+$--color-text-primary: #242424 !default;
 $--color-text-regular: #606266 !default;
 $--color-text-secondary: #909399 !default;
-$--color-text-placeholder: #c0c4cc !default;
+$--color-text-placeholder: #BABABA !default;
 
 /* Link
 -------------------------- */
